# cmakeduino

./: CMakeLists.txt  README.md  avr.cmake
arduino/: Arduino.h  CMakeLists.txt
